fixing mobile spacing for icon

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -3,8 +3,8 @@ body {
 }
 
 img {
-  margin-block: 20px 20px; 
-  margin-inline: 20px 20px;
+  margin-block: 5% 5%; 
+  margin-inline: 5% 5%;
 }
 
 /* Links */
